finalize all html and pass html validation

--- a/contact.html
+++ b/contact.html
@@ -19,13 +19,13 @@
 		<h2>Contact</h2>
 		<hr>
 		<form>
-			<label for="name">Name</label>
+			<label>Name</label>
 			<input type="text" name="name" placeholder="John Smith">
 
-			<label for="email">Email Address</label>
+			<label>Email Address</label>
 			<input type="email" name="email" placeholder="jdoe@gmail.com">
 
-			<label for="message">Message</label>
+			<label>Message</label>
 			<textarea name="message"></textarea>
 
 			<input type="submit">
@@ -38,7 +38,7 @@
 		<a href="http://www.github.com/yoonslee"><img src="assets/images/Github.png" alt="GitHub"></a>
 		<a href="http://www.linkedin.com/in/yoonslee"><img src="assets/images/Linkedin.png" alt="LinkedIn"></a>
 	</div><!-- connect-content -->
-	
+
 	<footer>
 		<small>&copy; Copyright 2016 Yoon Lee</small>
 	</footer><!-- footer -->
