begin styling index.html

--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Contact - All About Yoon</title>
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 	<header>
@@ -12,8 +13,8 @@
 				<li><a href="portfolio.html">Portfolio</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
-		</nav><!-- nav -->
-	</header><!-- header -->
+		</nav><!-- end nav -->
+	</header><!-- end header -->
 	
 	<div id="main-content">
 		<h2>Contact</h2>
@@ -29,18 +30,18 @@
 			<textarea name="message"></textarea>
 
 			<input type="submit">
-		</form><!-- form -->
-	</div><!-- main-content -->
+		</form><!-- end form -->
+	</div><!-- end main-content -->
 
 	<div id="connect-content">
 		<h3>Connect With Me</h3>
 		<hr>
 		<a href="http://www.github.com/yoonslee"><img src="assets/images/Github.png" alt="GitHub"></a>
 		<a href="http://www.linkedin.com/in/yoonslee"><img src="assets/images/Linkedin.png" alt="LinkedIn"></a>
-	</div><!-- connect-content -->
+	</div><!-- end connect-content -->
 
 	<footer>
 		<small>&copy; Copyright 2016 Yoon Lee</small>
-	</footer><!-- footer -->
+	</footer><!-- end footer -->
 </body>
 </html>
