still styling for index.html

--- a/index.html
+++ b/index.html
@@ -16,28 +16,30 @@
 		</nav><!-- end nav -->
 	</header><!-- end header -->
 	
-	<div id="main-content">
-		<h2>About Yoon</h2>
-		<hr>
-		<img src="assets/images/headshot.jpg" alt="the man himself">
-		<p>Dear visitor, my name is Yoon, and I am writing this blurb to share some good news. I am learning how to write HTML and CSS, and although it is not difficult at the moment, I expect things to get significantly harder in the coming weeks. Right now, I am enjoying the process of writing this paragraph. I hope to get a lot of practical knowledge out of this assignment. Yours truly, the one and only, Yoon. Too-da-loo!</p>
+	<div id="centered-div">
+		<div id="main-content">
+			<h2>About Yoon</h2>
+			<hr>
+			<img id ="headshot" src="assets/images/headshot.jpg" alt="the man himself">
+			<p>Dear visitor, my name is Yoon, and I am writing this blurb to share some good news. I am learning how to write HTML and CSS, and although it is not difficult at the moment, I expect things to get significantly harder in the coming weeks. Right now, I am enjoying the process of writing this paragraph. I hope to get a lot of practical knowledge out of this assignment. Yours truly, the one and only, Yoon. Too-da-loo!</p>
 
-		<h2>His Interests</h2>
-		<hr>
-		<ul>
-			<li>Graphic Design</li>
-			<li>Technology</li>
-			<li>The Future</li>
-			<li>Chopin</li>
-		</ul>
-	</div><!-- end main-content -->
+			<h2>His Interests</h2>
+			<hr>
+			<ul>
+				<li>Graphic Design</li>
+				<li>Technology</li>
+				<li>The Future</li>
+				<li>Chopin</li>
+			</ul>
+		</div><!-- end main-content -->
 
-	<div id="connect-content">
-		<h3>Connect With Me</h3>
-		<hr>
-		<a href="http://www.github.com/yoonslee"><img src="assets/images/Github.png" alt="GitHub"></a>
-		<a href="http://www.linkedin.com/in/yoonslee"><img src="assets/images/Linkedin.png" alt="LinkedIn"></a>
-	</div><!-- end connect-content -->
+		<div id="connect-content">
+			<h3>Connect With Me</h3>
+			<hr>
+			<a href="http://www.github.com/yoonslee"><img src="assets/images/Github.png" alt="GitHub"></a>
+			<a href="http://www.linkedin.com/in/yoonslee"><img src="assets/images/Linkedin.png" alt="LinkedIn"></a>
+		</div><!-- end connect-content -->
+	</div><!-- end centered-div -->
 
 	<footer>
 		<small>&copy; Copyright 2016 Yoon Lee</small>
