--- a/index.html
+++ b/index.html
@@ -6,38 +6,31 @@
 </head>
 <body>
 	<header>
-		<nav>
+		<div class="content-area">
 			<h1>Yoon Lee</h1>
-			<ul>
-				<li><a href="index.html">About</a></li>
-				<li><a href="portfolio.html">Portfolio</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-		</nav><!-- end nav -->
+			<nav>
+				<ul>
+					<li><a href="index.html">About</a></li>
+					<li><a href="portfolio.html">Portfolio</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+			</nav><!-- end nav -->
+			</div><!-- end content-area -->
 	</header><!-- end header -->
 	
-	<div id="centered-div">
+	<div class="content-area">
 		<div id="main-content">
 			<h2>About Yoon</h2>
 			<hr>
 			<img id ="headshot" src="assets/images/headshot.jpg" alt="the man himself">
 			<p>Dear visitor, my name is Yoon, and I am writing this blurb to share some good news. I am learning how to write HTML and CSS, and although it is not difficult at the moment, I expect things to get significantly harder in the coming weeks. Right now, I am enjoying the process of writing this paragraph. I hope to get a lot of practical knowledge out of this assignment. Yours truly, the one and only, Yoon. Too-da-loo!</p>
-
-			<h2>His Interests</h2>
-			<hr>
-			<ul>
-				<li>Graphic Design</li>
-				<li>Technology</li>
-				<li>The Future</li>
-				<li>Chopin</li>
-			</ul>
 		</div><!-- end main-content -->
 
-		<div id="connect-content">
+		<div id="sidebar">
 			<h3>Connect With Me</h3>
 			<hr>
-			<a href="http://www.github.com/yoonslee"><img src="assets/images/Github.png" alt="GitHub"></a>
-			<a href="http://www.linkedin.com/in/yoonslee"><img src="assets/images/Linkedin.png" alt="LinkedIn"></a>
+			<a href="http://www.github.com/yoonslee"><img class="social-media-icon" src="assets/images/Github.png" alt="GitHub"></a>
+			<a href="http://www.linkedin.com/in/yoonslee"><img class="social-media-icon" src="assets/images/Linkedin.png" alt="LinkedIn"></a>
 		</div><!-- end connect-content -->
 	</div><!-- end centered-div -->
 
