--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-	<header>
+	<header class="clearfix">
 		<div class="content-area">
 			<h1>Yoon Lee</h1>
 			<nav>
