--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav><!-- end nav -->
-			</div><!-- end content-area -->
+		</div><!-- end content-area -->
 	</header><!-- end header -->
 	
 	<div class="content-area">
@@ -23,18 +23,23 @@
 			<h2>About Yoon</h2>
 			<hr>
 			<img id ="headshot" src="assets/images/headshot.jpg" alt="the man himself">
-			<p>Dear visitor, my name is Yoon, and I am writing this blurb to share some good news. I am learning how to write HTML and CSS, and although it is not difficult at the moment, I expect things to get significantly harder in the coming weeks. Right now, I am enjoying the process of writing this paragraph. I hope to get a lot of practical knowledge out of this assignment. Yours truly, the one and only, Yoon. Too-da-loo!</p>
+			<p>Dear visitor, my name is Yoon, and I am writing this blurb to share some good news. I am learning how to write HTML and CSS, and although it is not difficult at the moment, I expect things to get significantly harder in the coming weeks. I hope to get a lot of practical knowledge out of this assignment. Yours truly, the one and only, Yoon.</p>
+			<p>Interests include graphic design, technology, America, and donuts.</p>
 		</div><!-- end main-content -->
 
 		<div id="sidebar">
 			<h3>Connect With Me</h3>
-			<hr>
-			<a href="http://www.github.com/yoonslee"><img class="social-media-icon" src="assets/images/Github.png" alt="GitHub"></a>
-			<a href="http://www.linkedin.com/in/yoonslee"><img class="social-media-icon" src="assets/images/Linkedin.png" alt="LinkedIn"></a>
-		</div><!-- end connect-content -->
-	</div><!-- end centered-div -->
+			<hr id="mini-hr">
+			<div id="icon-container">
+				<a href="http://www.github.com/yoonslee"><img id="github-icon" src="assets/images/Github.png" alt="GitHub"></a>
+				<a href="http://www.linkedin.com/in/yoonslee"><img id="linkedin-icon" src="assets/images/Linkedin.png" alt="LinkedIn"></a>
+				<a href="https://stackoverflow.com/users/7299758/yoon"><img id="stackoverflow-icon" src="assets/images/stackoverflow.png" alt="LinkedIn"></a>
+			</div><!-- end icon-container -->
+		</div><!-- end sidebar -->
+	</div><!-- end content-area -->
 
-	<footer>
+	<footer class="clearfix">
+		<div id="footer-accent"></div>
 		<small>&copy; Copyright 2016 Yoon Lee</small>
 	</footer><!-- end footer -->
 </body>
