--- a/portfolio.html
+++ b/portfolio.html
@@ -5,54 +5,62 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-	<header>
-		<nav>
-			<h1>Yoon Lee</h1>
-			<ul>
-				<li><a href="index.html">About</a></li>
-				<li><a href="portfolio.html">Portfolio</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-		</nav><!-- end nav -->
+	<header class="clearfix">
+		<div class="content-area">
+			<nav>
+				<h1>Yoon Lee</h1>
+				<ul>
+					<li><a href="index.html">About</a></li>
+					<li><a href="portfolio.html">Portfolio</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+			</nav><!-- end nav -->
+		</div><!-- end content-area -->
 	</header><!-- end header -->
-	
-	<div id="main-content">
-		<h2>Portfolio</h2>
-		<hr>
-		<div>
-			<a href="#">Hangman</a>
-			<img src="http://placehold.it/350x200" alt="">
-		</div>
-		<div>
-			<a href="#">RPG Game</a>
-			<img src="http://placehold.it/350x200" alt="">
-		</div>
-		<div>
-			<a href="#">Trivia Game</a>
-			<img src="http://placehold.it/350x200" alt="">
-		</div>
-		<div>
-			<a href="#">UCLA Info Widget</a>
-			<img src="http://placehold.it/350x200" alt="">
-		</div>
-		<div>
-			<a href="#">Tesla Autopilot</a>
-			<img src="http://placehold.it/350x200" alt="">
-		</div>
-		<div>
-			<a href="#">Rock Paper Scissors</a>
-			<img src="http://placehold.it/350x200" alt="">
-		</div>
-	</div><!-- end main-content -->
 
-	<div id="connect-content">
-		<h3>Connect With Me</h3>
-		<hr>
-		<a href="http://www.github.com/yoonslee"><img src="assets/images/Github.png" alt="GitHub"></a>
-		<a href="http://www.linkedin.com/in/yoonslee"><img src="assets/images/Linkedin.png" alt="LinkedIn"></a>
-	</div><!-- end connect-content -->
+	<div class="content-area">
+		<div id="main-content">
+			<h2>Portfolio</h2>
+			<hr>
+			<div>
+				<a href="#">Hangman</a>
+				<img src="http://placehold.it/350x200" alt="">
+			</div>
+			<div>
+				<a href="#">RPG Game</a>
+				<img src="http://placehold.it/350x200" alt="">
+			</div>
+			<div>
+				<a href="#">Trivia Game</a>
+				<img src="http://placehold.it/350x200" alt="">
+			</div>
+			<div>
+				<a href="#">UCLA Info Widget</a>
+				<img src="http://placehold.it/350x200" alt="">
+			</div>
+			<div>
+				<a href="#">Tesla Autopilot</a>
+				<img src="http://placehold.it/350x200" alt="">
+			</div>
+			<div>
+				<a href="#">Rock Paper Scissors</a>
+				<img src="http://placehold.it/350x200" alt="">
+			</div>
+		</div><!-- end main-content -->
+
+		<div id="sidebar">
+			<h3>Connect With Me</h3>
+			<hr id="mini-hr">
+			<div id="icon-container">
+				<a href="http://www.github.com/yoonslee"><img id="github-icon" src="assets/images/Github.png" alt="GitHub"></a>
+				<a href="http://www.linkedin.com/in/yoonslee"><img id="linkedin-icon" src="assets/images/Linkedin.png" alt="LinkedIn"></a>
+				<a href="https://stackoverflow.com/users/7299758/yoon"><img id="stackoverflow-icon" src="assets/images/stackoverflow.png" alt="LinkedIn"></a>
+			</div><!-- end icon-container -->
+		</div><!-- end sidebar -->
+	</div><!-- end content-area -->
 	
-	<footer>
+	<footer class="clearfix">
+		<div id="footer-accent"></div>
 		<small>&copy; Copyright 2016 Yoon Lee</small>
 	</footer><!-- end footer -->
 </body>
