fix footer, now fixed at bottom and scrolls correctly

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-	<div id="wrapper">
+	<div id="wrapper" class="clearfix">
 		<header class="clearfix">
 			<div class="content-area">
 				<nav>
@@ -60,7 +60,9 @@
 			</div><!-- end sidebar -->
 		</div><!-- end content-area -->
 		
-		<footer>
+		<div class="push"></div><!-- end push -->
+		
+		<footer class="clearfix">
 			<div id="footer-accent"></div>
 			<small>&copy; Copyright 2016 Yoon Lee</small>
 		</footer><!-- end footer -->
