--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-	<div id="wrapper">
+	<div id="wrapper" class="clearfix">
 		<header class="clearfix">
 			<div class="content-area">
 				<h1>Yoon Lee</h1>
@@ -38,8 +38,10 @@
 				</div><!-- end icon-container -->
 			</div><!-- end sidebar -->
 		</div><!-- end content-area -->
+		
+		<div class="push"></div><!-- end push -->
 
-		<footer>
+		<footer class="clearfix">
 			<div id="footer-accent"></div>
 			<small>&copy; Copyright 2016 Yoon Lee</small>
 		</footer><!-- end footer -->
