finish basic homework requirements, add placeholder images

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,28 +24,28 @@
 				<h2>Portfolio</h2>
 				<hr>
 				<div class="proj-div">
+					<img src="assets/images/abstract-q-c-275-200-6.jpg" alt="">
 					<a href="#">Hangman</a>
-					<img src="http://placehold.it/350x200" alt="">
 				</div>
 				<div class="proj-div">
+					<img src="assets/images/cats-q-c-275-200-2.jpg" alt="">
 					<a href="#">RPG Game</a>
-					<img src="http://placehold.it/350x200" alt="">
 				</div>
 				<div class="proj-div">
+					<img src="assets/images/technics-q-c-275-200-10.jpg" alt="">		
 					<a href="#">Trivia Game</a>
-					<img src="http://placehold.it/350x200" alt="">
 				</div>
 				<div class="proj-div">
+					<img src="assets/images/technics-q-c-275-200-2.jpg" alt="">
 					<a href="#">UCLA Info Widget</a>
-					<img src="http://placehold.it/350x200" alt="">
 				</div>
 				<div class="proj-div">
+					<img src="assets/images/technics-q-c-275-200-5.jpg" alt="">
 					<a href="#">Tesla Autopilot</a>
-					<img src="http://placehold.it/350x200" alt="">
 				</div>
 				<div class="proj-div">
+					<img src="assets/images/technics-q-c-275-200-9.jpg" alt="">		
 					<a href="#">Rock Paper Scissors</a>
-					<img src="http://placehold.it/350x200" alt="">
 				</div>
 			</div><!-- end main-content -->
 
@@ -61,7 +61,7 @@
 		</div><!-- end content-area -->
 		
 		<div class="push"></div><!-- end push -->
-		
+
 		<footer class="clearfix">
 			<div id="footer-accent"></div>
 			<small>&copy; Copyright 2016 Yoon Lee</small>
