add finishing touches, hover states to few elements

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
 				</div>
 				<div class="proj-div">
 					<img src="assets/images/technics-q-c-275-200-5.jpg" alt="">
-					<a href="#">Tesla Autopilot</a>
+					<a href="#">Water-Proof Earbuds</a>
 				</div>
 				<div class="proj-div">
 					<img src="assets/images/technics-q-c-275-200-9.jpg" alt="">		
